--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Clase Práctica</title>
+  <title>Clase Práctica - Ejercicio de las Banderas</title>
 </head>
 <body>
+  
   <p>Seleccione una opción:</p>
   <ul><!-- comentario -->
     <li><p><a href="part1.html" target="_blank" >Parte 1</a></p></li>
